<resources>
    <string name="app_name">Project3</string>
    <string name="action_settings">Settings</string>
    <string name="title">Calculate Your BMI</string>
    <string name="whint">Weight</string>
    <string name="hhint">Height</string>
    <string name="centi">cm</string>
    <string name="inches">inches</string>
    <string name="kilos">kg</string>
    <string name="pounds">lbs</string>
    <string name="buttontext">calculate</string>
    <string name="image_descriptor">BMI Chart</string>
    <string name="disclaimer">BMI (Body Mass Index) is a common metric used for body fatness screening, but is not a conclusive diagnostic of overall health. Visit http://www.cdc.gov/healthyweight to learn more.</string>
    <string name="title_activity_show_information_">showInformation_</string>
    <string name="questionmark">"?"</string>

</resources>
